# web-app

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
data extraction/: data_wrapper.py
data_extraction/: data_wrapper.py
util/: constants.py  utils.py
visualizations/: create_visualizations.py
