[tool.poetry]
name = "web-app"
version = "0.1.0"
description = ""
authors = ["Federico Dominguez Molina"]
readme = "README.md"
# Disable packaging mode
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
pandas = "^2.2.2"
pillow = "^10.4.0"
boto3 = "^1.35.15"
botocore = "^1.35.15"
plotly = "^5.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
